cert_subheaders_update

--- a/index.html
+++ b/index.html
@@ -1308,7 +1308,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
           <div class="cert-content">
             <div class="cert-title">Tableau Certified Data Analyst</div>
-            <div class="cert-issuer">Salesforce Tableau</div>
+            <div class="cert-issuer">Tableau (Salesforce)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Tableau Certified Data Analyst certificate.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1322,7 +1322,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
           <div class="cert-content">
             <div class="cert-title">Tableau Desktop Specialist</div>
-            <div class="cert-issuer">Salesforce Tableau</div>
+            <div class="cert-issuer">Tableau (Salesforce)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Tableau Desktop Specialist certificate.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1382,7 +1382,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
           </div>
           <div class="cert-content">
             <div class="cert-title">Power BI Introduction</div>
-            <div class="cert-issuer">Google BI Track (Coursera)</div>
+            <div class="cert-issuer">Coursera</div>
             <a class="cert-link-button"
                href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1409,8 +1409,8 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
                  alt="Clinical Trials & Monitoring" />
           </div>
           <div class="cert-content">
-            <div class="cert-title">Proficiency — Clinical Trials & Monitoring</div>
-            <div class="cert-issuer">Professional Certification</div>
+            <div class="cert-title">Clinical Trials and Monitoring</div>
+            <div class="cert-issuer">ACRP (Proficiency)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf"
                target="_blank" rel="noopener">View Certificate</a>
