--- a/test.html
+++ b/test.html
@@ -1235,7 +1235,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Comprehensive Certificate -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.jpg"
+            <img src="./images/certifications/thumbnail images/Coursera- Google Business Intelligence - Comprehensive - HNLTRCZORX4O.jpg"
                  alt="Google Business Intelligence Pathway" />
           </div>
           <div class="cert-content">
@@ -1250,7 +1250,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Foundations of Business Intelligence -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.png"
+            <img src="./images/certifications/thumbnail images/Coursera Google- Foundations of Business Intelligence- 40NF9EBUO2N8.png"
                  alt="Foundations of Business Intelligence" />
           </div>
           <div class="cert-content">
@@ -1265,7 +1265,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- The Path to Insights -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google- The Path to Insights- EWYOVO5LPQQC.png"
+            <img src="./images/certifications/thumbnail images/Coursera Google- The Path to Insights- EWYOVO5LPQQC.png"
                  alt="The Path to Insights: Data Models and Pipelines" />
           </div>
           <div class="cert-content">
@@ -1280,7 +1280,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <!-- Decisions, Decisions: Dashboards and Reports -->
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera Google Business Intelligence-  Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.jpg"
+            <img src="./images/certifications/thumbnail images/Coursera Google Business Intelligence-  Decisions, Decisions, Dashboards and Reports - ILIBFO9L3UKB.jpg"
                  alt="Decisions, Decisions: Dashboards and Reports" />
           </div>
           <div class="cert-content">
@@ -1303,12 +1303,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Tableau Certified Data Analyst certificate.png"
+            <img src="./images/certifications/thumbnail images/Tableau Certified Data Analyst certificate.png"
                  alt="Tableau Certified Data Analyst" />
           </div>
           <div class="cert-content">
             <div class="cert-title">Tableau Certified Data Analyst</div>
-            <div class="cert-issuer">Salesforce Tableau</div>
+            <div class="cert-issuer">Tableau (Salesforce)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Tableau Certified Data Analyst certificate.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1317,12 +1317,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Tableau Desktop Specialist certificate.png"
+            <img src="./images/certifications/thumbnail images/Tableau Desktop Specialist certificate.png"
                  alt="Tableau Desktop Specialist" />
           </div>
           <div class="cert-content">
             <div class="cert-title">Tableau Desktop Specialist</div>
-            <div class="cert-issuer">Salesforce Tableau</div>
+            <div class="cert-issuer">Tableau (Salesforce)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Tableau Desktop Specialist certificate.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1340,7 +1340,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/IBM AI Foundations for Everyone Coursera 81KHE539ONWB-1.png"
+            <img src="./images/certifications/thumbnail images/IBM AI Foundations for Everyone Coursera 81KHE539ONWB-1.png"
                  alt="IBM AI Foundations for Everyone" />
           </div>
           <div class="cert-content">
@@ -1354,7 +1354,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
+            <img src="./images/certifications/thumbnail images/Coursera- GenAI- Intro & Applications- IBM CHKHEVSPNRSS-1.png"
                  alt="GenAI: Intro & Applications" />
           </div>
           <div class="cert-content">
@@ -1377,12 +1377,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
       <div class="cert-grid" style="margin-top:1rem">
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Coursera - Power BI Introduction LO2XHKFW1H52-1.png"
+            <img src="./images/certifications/thumbnail images/Coursera - Power BI Introduction LO2XHKFW1H52-1.png"
                  alt="Power BI Introduction" />
           </div>
           <div class="cert-content">
             <div class="cert-title">Power BI Introduction</div>
-            <div class="cert-issuer">Google BI Track (Coursera)</div>
+            <div class="cert-issuer">Coursera</div>
             <a class="cert-link-button"
                href="./documents/certifications/Coursera - Power BI Introduction LO2XHKFW1H52.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1391,7 +1391,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/AWS Machine Learning Services.png"
+            <img src="./images/certifications/thumbnail images/AWS Machine Learning Services.png"
                  alt="AWS Certificates" />
           </div>
           <div class="cert-content">
@@ -1405,12 +1405,12 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia-1.png"
+            <img src="./images/certifications/thumbnail images/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia-1.png"
                  alt="Clinical Trials & Monitoring" />
           </div>
           <div class="cert-content">
-            <div class="cert-title">Proficiency — Clinical Trials & Monitoring</div>
-            <div class="cert-issuer">Professional Certification</div>
+            <div class="cert-title">Clinical Trials and Monitoring</div>
+            <div class="cert-issuer">ACRP (Proficiency)</div>
             <a class="cert-link-button"
                href="./documents/certifications/Proficiency- Clinical Trials & Monitoring certifications- Sahil Walia.pdf"
                target="_blank" rel="noopener">View Certificate</a>
@@ -1419,7 +1419,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
 
         <article class="card cert-card">
           <div class="cert-image">
-            <img src="./images/certifications/six sigma green belt.png"
+            <img src="./images/certifications/thumbnail images/six sigma green belt.png"
                  alt="Six Sigma Green Belt" />
           </div>
           <div class="cert-content">
