updated_resume_certs

--- a/index.html
+++ b/index.html
@@ -1392,10 +1392,10 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
         <article class="card cert-card">
           <div class="cert-image">
             <img src="./images/certifications/thumbnail images/AWS Machine Learning Services.png"
-                 alt="AWS Certificates" />
+                 alt="Amazon Web Services - Combined - AI & Machine Learning" />
           </div>
           <div class="cert-content">
-            <div class="cert-title">AWS Certificates</div>
+            <div class="cert-title">AWS: AI & Machine Learning</div>
             <div class="cert-issuer">Amazon Web Services</div>
             <a class="cert-link-button"
                href="./documents/certifications/AWS_Certificates.pdf"
