--- a/index.html
+++ b/index.html
@@ -1371,7 +1371,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
     <!-- MISCELLANEOUS -->
     <details class="card fade-in">
       <summary style="cursor:pointer;display:flex;align-items:center;justify-content:space-between;gap:1rem;font-weight:800;font-size:1.05rem">
-        <span>Miscellaneous</span>
+        <span>Additional Credentials</span>
         <span aria-hidden="true">▾</span>
       </summary>
       <div class="cert-grid" style="margin-top:1rem">
