--- a/index.html
+++ b/index.html
@@ -779,7 +779,7 @@ footer p:last-child{font-size:var(--font-size-sm);opacity:.85;line-height:1.4}
               <span>View My Work</span>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M5 12h14m-7-7l7 7-7 7"/></svg>
             </a>
-            <a href="/Users/walnation/Documents/GitHub/walia-sahil.github.io/portfolio/Sahil_Walia_Resume.pdf" download class="btn btn-secondary">
+            <a href="./Sahil Walia - Resume.pdf" download class="btn btn-secondary">
               <span>Download Resume</span>
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4m7-5l5 5m0 0l5-5m-5 5V3"/></svg>
             </a>
